--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "google-maps-react": "^2.0.2",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
