--- a/.gitignore
+++ b/.gitignore
@@ -132,5 +132,5 @@ sketch
 # Ignore all local history of files
 .history
 
-build/
+build/*
 # End of https://www.gitignore.io/api/node,react,visualstudiocode
