--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
-  "homepage": "http://thecodersingh.github.io/home"
+  "homepage": "http://thecodersingh.github.io/aura"
 }
